# clawpwn

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HELP.md  LICENSE  README.md  SECURITY.md  docker-compose.experience-db.yml  install.sh  pyproject.toml  setup.sh  start-lab.sh  start-msf2.sh  update.sh
.cursor/: hooks.json
.cursor/hooks/: check-file-size.sh
.cursor/rules/: file-size-limits.mdc
.github/: PULL_REQUEST_TEMPLATE.md  release-please-config.json  release-please-manifest.json
.github/workflows/: ci.yml  pages.yml  release-please.yml
docker/postgres/init/: 010_experience_schema.sql  020_experience_seed.sql
docs/: index.html  llms.txt  prd.md  styles.css
poc/: CVE-2012-1823.py
src/clawpwn/: __init__.py  cli.py  config.py
src/clawpwn/ai/: __init__.py  llm.py  nli.py  orchestrator.py
src/clawpwn/ai/llm/: __init__.py  analysis.py  anthropic_impl.py  api_helpers.py  client.py  openai_impl.py  tool_support.py
src/clawpwn/ai/nli/: __init__.py  constants.py  context_mixin.py  conversation_mixin.py  discovery_handlers_mixin.py  extract_help_mixin.py  help_topic_aliases.py  help_topics.py  help_topics_core.py  help_topics_ops.py  interface.py  parse_params_mixin.py  scan_handlers_mixin.py  scan_options_mixin.py  scope_mixin.py  support_handlers_mixin.py
src/clawpwn/ai/orchestrator/: __init__.py  analysis_mixin.py  decision_mixin.py  execute_mixin.py  manager.py  models.py  run_mixin.py
src/clawpwn/cli_commands/: __init__.py  autopilot_command.py  config_command.py  console_command.py  deps.py  discover_command.py  doctor_checks.py  doctor_command.py  doctor_env_checks.py  experience_command.py  killchain_command.py  memory_command.py  project_init.py  project_state.py  recon_command.py  report_logs_command.py  scan_command.py  scan_helpers.py  shared.py
src/clawpwn/cli_commands/scan_command/: __init__.py  command.py  network_runner.py  web_runner.py
src/clawpwn/config/: __init__.py  env_loader.py  getters.py  interactive.py  project_setup.py
src/clawpwn/console/: __init__.py  app.py  completer.py  history.py  router.py
src/clawpwn/console/app/: __init__.py  banner.py  command_mixin.py  help_aliases.py  help_data.py  help_mixin.py  help_topics_primary.py  help_topics_secondary.py  manager.py  runtime_mixin.py
src/clawpwn/db/: __init__.py  experience_init.py  experience_models.py  init.py  models.py
src/clawpwn/modules/: __init__.py  experience.py  exploit.py  network.py  proxy.py  report.py  scanner.py  session.py  vulndb.py
src/clawpwn/modules/attack_feedback/: __init__.py  analyzer.py  models.py
src/clawpwn/modules/credtest/: __init__.py  candidates.py  defaults.py  helpers.py  hydra_helpers.py  hydra_runner.py  tester.py
src/clawpwn/modules/exploit/: __init__.py  manager.py  models.py  path_cmd_mixin.py  sql_xss_mixin.py  utility_mixin.py
src/clawpwn/modules/network_helpers/: __init__.py  host_scan.py  operations.py  parallel_scan.py  scan_display.py  vuln_tasks.py
src/clawpwn/modules/network_parts/: __init__.py  deps.py  operations_mixin.py  scanner_mixin.py  task_mixin.py
src/clawpwn/modules/proxy/: __init__.py  interceptor.py  interceptor_helpers.py  replay.py  store.py
src/clawpwn/modules/recon/: __init__.py  amass_models.py  amass_runner.py  fingerprint.py
src/clawpwn/modules/report/: __init__.py  generator.py  grouping.py  html_report.py  json_report.py  markdown_report.py  models.py  pdf_report.py  summary.py
src/clawpwn/modules/scanner/: __init__.py  active.py  active_checks_misc.py  active_checks_sql_xss.py  (+6 more)
src/clawpwn/tools/: __init__.py  http.py  masscan.py  nmap.py  rustscan.py
src/clawpwn/utils/: __init__.py  async_utils.py  debug.py  privileges.py
tests/: AUTONOMOUS_TESTS.md  __init__.py  conftest.py  test_agent_autonomous.py  test_agent_memory.py  test_amass.py  test_attack_feedback.py  test_autopilot.py  test_capability_sync.py  test_cli.py  test_config.py  test_console.py  test_console_updates.py  test_credtest.py  test_database.py  test_doctor.py  test_experience.py  test_fetch_and_command.py  test_http_tools.py  test_integration.py  test_masscan.py  test_naabu.py  test_network.py  test_new_plugins.py  test_new_tool_executors.py  test_new_tools_integration.py  test_nli.py  test_nmap.py  test_plan_executor.py  test_plan_helpers.py  test_plan_optimizers.py  test_plan_persistence.py  test_plan_runner.py  test_plugin_sqlmap.py  test_plugin_testssl.py  test_plugin_wiring.py  test_plugin_wpscan.py  test_privileges.py  test_proxy.py  test_recon.py  (+10 more)
(+109 files in other folders)
