[project]
name = "clawpwn"
version = "0.1.0"
description = "AI-powered penetration testing tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "prompt_toolkit>=3.0.43",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
]

[project.scripts]
clawpwn = "clawpwn:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
filterwarnings = [
    "ignore:datetime.datetime.utcnow.*:DeprecationWarning",
    "ignore:The ``declarative_base()`` function.*:sqlalchemy.exc.MovedIn20Warning",
    "ignore::ResourceWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "B011"]  # allow assert in tests; assert False -> use pytest.fail in future
"src/clawpwn/cli.py" = ["B904"]  # raise typer.Exit(1) in except without from
"src/clawpwn/db/*" = ["S311"]  # allow random in UUID if used
